Corrections LP - html, css
Réparer scrollspy, ajout css pour scrollbar, remplacement div par section

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700;1,900&display=swap");
+
 :root {
   --bs-success: #323232;
   --bs-info: #222222;
@@ -7,8 +9,6 @@
   --bs-secondary: #6a9275;
   --Noto: "NotoSans", sans-serif;
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700;1,900&display=swap");
 
 /*------------- Styles Généraux -------------*/
 
@@ -56,4 +56,25 @@ h6,
   font-size: 12px;
   font-weight: 700;
   color: var(--bs-light);
+}
+
+/* w3schools.com/howto/howto_css_custom_scrollbar.asp */
+/* Réutilise les couleurs des variables prédéfinies, mais plus pales pour contraste. */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ececec;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--bs-secondary);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #79a786;
 }
